--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>06 сен: <DD><a href="/catalog/cat28.shtml"  title="Диск алмазный сегментный РОСОМАХА: Цена ЗНАЧИТЕЛЬНО снижена + Распродажа по оптовой цене"><span class="title">Диск алмазный</span><span class="dop"> РОСОМАХА</span></a><br>
   <DT>26 авг : <DD><a href="/catalog/cat69.shtml"  title="Расширен ассортимент: Миксеры универсальные, шестигранный хвостовик"><span class="title">Миксеры</span><span class="dop"> (насадки на миксер)</span></a><br>
   <DT>16 авг : <DD><a href="/catalog/cat48.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Буры по бетону</span><span class="dop"> SDS Max</span></a><br>
   <DT>15 авг : <DD><a href="/catalog/cat189.shtml" title="Расширен ассортимент"><span class="title">Чашки алмазные зачистные</span><span class="dop"></span></a><br>
