--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>07 окт:  <DD><a href="/catalog/cat28.shtml"  title="Новый товар"><span class="title">Диски алмазные</span><span class="dop"> SPIN CERAM</span></a><br>
+  <DT>05 окт:  <DD><a href="/catalog/cat92.shtml"  title="Новый товар"><span class="title">Респиратор</span><span class="dop"> Rutex 1001</span></a><br>
   <DT>27 сен:  <DD><a href="/catalog/cat139.shtml" title="Расширен ассортимент:&#xa;Новые молотки слесарные VOLKSHAMMER на деревянной рукоятке"><span class="title">Молотки слесарные</span><span class="dop" style="font-size: smaller"> VOLKSHAMMER</span></a><br>
   <DT>16 сен:  <DD><a href="/catalog/cat76.shtml"  title="Новые товары"><span class="title">Угольники литые с уровнем</span><span class="dop"></span></a><br>
   <DT>13 сен:  <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент:&#xa;Новые строительные рулетки EFFECTA &laquo;Nylon&raquo; ПРОФИ"><span class="title">Строительные рулетки</span><span class="dop"> EFFECTA</span></a><br>
@@ -10,10 +12,7 @@
   <DT>13 авг : <DD><a href="/catalog/cat18.shtml"  title="Саморезы по дереву, гипсокартону и тонкому металлу: Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Саморезы</span><span class="dop" style="font-size: smaller"></span></a><br>
   <DT>12 авг : <DD><a href="/catalog/cat264.shtml" title="Новый товар:&#xa;Маска сварщика WH ХАРЛЕЙ с автоматическим светофильтром WH510S,&#xa;за время менее 30 мкс ослабляющим световой поток на 9-13 ед. DIN&#xa;(стандарт EN 169), что соответствует затемнению С4-С8 по ОСТ 21-6-87"><span class="title">Маска сварщика</span><span class="dop" style="font-size: smaller"> WH ХАРЛЕЙ с АСФ</span></a><br>
   <DT>02 июл:  <DD><a href="/catalog/cat302.shtml" title="Новый товар"><span class="title">Бучарда SDS Max</span><span class="dop"> 40х40х250мм</span></a><br>
-  <DT>01 июл:  <DD><a href="/catalog/cat107.shtml" title="Новые товары"><span class="title">Нож 18 мм</span><span class="dop">, алюмин. корпус</span></a><br>
-  <DT>24 июн:  <DD><a href="/catalog/cat77.shtml"  title="Расширен ассортимент"><span class="title">Наборы свёрел по металлу</span><span class="dop"></span></a><br>
-  <DT>21 июн:  <DD><a href="/catalog/cat472.shtml" title="Новые товары"><span class="title">Хомуты сантехнические</span><span class="dop"></span></a><br>
-  <DT>20 июн:  <DD><a href="/catalog/cat33.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Гайки</span><span class="dop"> ГОСТ 5915-70</span></a><br>
+  <DT>01 июл:  <DD><a href="/catalog/cat107.shtml" title="Новый товары"><span class="title">Нож 18 мм</span><span class="dop">, алюмин. корпус</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
