--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>15 окт:  <DD><a href="/catalog/cat172.shtml" title="Значительно расширен ассортимент:&#xa;Коронки по бетону в сборе, хвостовик SDS+ HAGWERT"><span class="title">Коронки по бетону</span><span class="dop"> SDS+</span></a><br>
   <DT>09 окт:  <DD><a href="/catalog/cat175.shtml" title="Расширен ассортимент:&#xa;Новая пена SOUDAL &laquo;Profil&raquo; зимняя"><span class="title">Монтажная пена</span><span class="dop"> ЗИМНЯЯ</span></a><br>
   <DT>07 окт:  <DD><a href="/catalog/cat28.shtml"  title="Новый товар"><span class="title">Диски алмазные</span><span class="dop"> SPIN CERAM</span></a><br>
   <DT>05 окт:  <DD><a href="/catalog/cat92.shtml"  title="Новый товар"><span class="title">Респиратор</span><span class="dop"> Rutex 1001</span></a><br>
@@ -12,8 +13,6 @@
   <DT>15 авг : <DD><a href="/catalog/cat189.shtml" title="Расширен ассортимент"><span class="title">Чашки алмазные зачистные</span><span class="dop"></span></a><br>
   <DT>13 авг : <DD><a href="/catalog/cat18.shtml"  title="Саморезы по дереву, гипсокартону и тонкому металлу: Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Саморезы</span><span class="dop" style="font-size: smaller"></span></a><br>
   <DT>12 авг : <DD><a href="/catalog/cat264.shtml" title="Новый товар:&#xa;Маска сварщика WH ХАРЛЕЙ с автоматическим светофильтром WH510S,&#xa;за время менее 30 мкс ослабляющим световой поток на 9-13 ед. DIN&#xa;(стандарт EN 169), что соответствует затемнению С4-С8 по ОСТ 21-6-87"><span class="title">Маска сварщика</span><span class="dop" style="font-size: smaller"> WH ХАРЛЕЙ с АСФ</span></a><br>
-  <DT>02 июл:  <DD><a href="/catalog/cat302.shtml" title="Новый товар"><span class="title">Бучарда SDS Max</span><span class="dop"> 40х40х250мм</span></a><br>
-  <DT>01 июл:  <DD><a href="/catalog/cat107.shtml" title="Новый товары"><span class="title">Нож 18 мм</span><span class="dop">, алюмин. корпус</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
