--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>05 ноя:  <DD><a href="/catalog/cat189.shtml" title="АКЦИЯ - установлена особенно низкая цена:&#xa;Чашка алмазная зачистная двухрядная 125 мм &laquo;DiaJet&raquo;"><span class="title">Чашка алмазная 125 мм</span><span class="dop"> DiaJet</span></a><br>
+  <DT>28 окт:  <DD><a href="/catalog/cat600.shtml" title="Новые товары"><span class="title">Фал полипропиленовый</span><span class="dop"> 6-12 мм</span></a><br>
   <DT>15 окт:  <DD><a href="/catalog/cat172.shtml" title="Значительно расширен ассортимент:&#xa;Коронки по бетону в сборе, хвостовик SDS+ HAGWERT"><span class="title">Коронки по бетону</span><span class="dop"> SDS+</span></a><br>
   <DT>09 окт:  <DD><a href="/catalog/cat175.shtml" title="Расширен ассортимент:&#xa;Новая пена SOUDAL &laquo;Profil&raquo; зимняя"><span class="title">Монтажная пена</span><span class="dop"> ЗИМНЯЯ</span></a><br>
   <DT>07 окт:  <DD><a href="/catalog/cat28.shtml"  title="Новый товар"><span class="title">Диски алмазные</span><span class="dop"> SPIN CERAM</span></a><br>
@@ -7,12 +9,6 @@
   <DT>27 сен:  <DD><a href="/catalog/cat139.shtml" title="Расширен ассортимент:&#xa;Новые молотки слесарные VOLKSHAMMER на деревянной рукоятке"><span class="title">Молотки слесарные</span><span class="dop" style="font-size: smaller"> VOLKSHAMMER</span></a><br>
   <DT>16 сен:  <DD><a href="/catalog/cat76.shtml"  title="Новые товары"><span class="title">Угольники литые с уровнем</span><span class="dop"></span></a><br>
   <DT>13 сен:  <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент:&#xa;Новые строительные рулетки EFFECTA &laquo;Nylon&raquo; ПРОФИ"><span class="title">Строительные рулетки</span><span class="dop"> EFFECTA</span></a><br>
-  <DT>06 сен:  <DD><a href="/catalog/cat28.shtml"  title="Диск алмазный сегментный РОСОМАХА:&#xa;Цена ЗНАЧИТЕЛЬНО снижена + Распродажа по оптовой цене"><span class="title">Диск алмазный</span><span class="dop"> РОСОМАХА</span></a><br>
-  <DT>26 авг : <DD><a href="/catalog/cat69.shtml"  title="Расширен ассортимент: Миксеры универсальные, шестигранный хвостовик"><span class="title">Миксеры</span><span class="dop"> (насадки на миксер)</span></a><br>
-  <DT>16 авг : <DD><a href="/catalog/cat48.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Буры по бетону</span><span class="dop"> SDS Max</span></a><br>
-  <DT>15 авг : <DD><a href="/catalog/cat189.shtml" title="Расширен ассортимент"><span class="title">Чашки алмазные зачистные</span><span class="dop"></span></a><br>
-  <DT>13 авг : <DD><a href="/catalog/cat18.shtml"  title="Саморезы по дереву, гипсокартону и тонкому металлу: Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Саморезы</span><span class="dop" style="font-size: smaller"></span></a><br>
-  <DT>12 авг : <DD><a href="/catalog/cat264.shtml" title="Новый товар:&#xa;Маска сварщика WH ХАРЛЕЙ с автоматическим светофильтром WH510S,&#xa;за время менее 30 мкс ослабляющим световой поток на 9-13 ед. DIN&#xa;(стандарт EN 169), что соответствует затемнению С4-С8 по ОСТ 21-6-87"><span class="title">Маска сварщика</span><span class="dop" style="font-size: smaller"> WH ХАРЛЕЙ с АСФ</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
