--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,5 +1,11 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>06 сен:  <DD><a href="/catalog/cat28.shtml"  title="Диск алмазный сегментный РОСОМАХА:&#xa;Цена ЗНАЧИТЕЛЬНО снижена + Распродажа по оптовой цене"><span class="title">Диск алмазный</span><span class="dop"> РОСОМАХА</span></a><br>
+  <DT>26 авг : <DD><a href="/catalog/cat69.shtml"  title="Расширен ассортимент: Миксеры универсальные, шестигранный хвостовик"><span class="title">Миксеры</span><span class="dop"> (насадки на миксер)</span></a><br>
+  <DT>16 авг : <DD><a href="/catalog/cat48.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Буры по бетону</span><span class="dop"> SDS Max</span></a><br>
+  <DT>15 авг : <DD><a href="/catalog/cat189.shtml" title="Расширен ассортимент"><span class="title">Чашки алмазные зачистные</span><span class="dop"></span></a><br>
+  <DT>13 авг : <DD><a href="/catalog/cat18.shtml"  title="Саморезы по дереву, гипсокартону и тонкому металлу: Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Саморезы</span><span class="dop" style="font-size: smaller"></span></a><br>
+  <DT>12 авг : <DD><a href="/catalog/cat264.shtml" title="Новый товар:&#xa;Маска сварщика WH ХАРЛЕЙ с автоматическим светофильтром WH510S,&#xa;за время менее 30 мкс ослабляющим световой поток на 9-13 ед. DIN&#xa;(стандарт EN 169), что соответствует затемнению С4-С8 по ОСТ 21-6-87"><span class="title">Маска сварщика</span><span class="dop" style="font-size: smaller"> WH ХАРЛЕЙ с АСФ</span></a><br>
   <DT>02 июл:  <DD><a href="/catalog/cat302.shtml" title="Новый товар"><span class="title">Бучарда SDS Max</span><span class="dop"> 40х40х250мм</span></a><br>
   <DT>01 июл:  <DD><a href="/catalog/cat107.shtml" title="Новый товары"><span class="title">Нож 18 мм</span><span class="dop">, алюмин. корпус</span></a><br>
   <DT>24 июн:  <DD><a href="/catalog/cat77.shtml"  title="Расширен ассортимент"><span class="title">Наборы свёрел по металлу</span><span class="dop"></span></a><br>
