--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>08 ноя:  <DD><a href="/catalog/cat175.shtml" title="Новый товар:&#xa;Пена монтажная пистолетная профессиональная ЗИМНЯЯ &laquo;MaxiArctic-25&raquo;&#xa;для использования при особо низкой температуре &mdash; до -25&deg;C"><span class="title">Пена монтажная</span><span class="dop"> MaxiArctic-25</span></a><br>
   <DT>05 ноя:  <DD><a href="/catalog/cat189.shtml" title="АКЦИЯ - установлена особенно низкая цена:&#xa;Чашка алмазная зачистная двухрядная 125 мм &laquo;DiaJet&raquo;"><span class="title">Чашка алмазная 125 мм</span><span class="dop"> DiaJet</span></a><br>
   <DT>28 окт:  <DD><a href="/catalog/cat600.shtml" title="Новые товары"><span class="title">Фал полипропиленовый</span><span class="dop"> 6-12 мм</span></a><br>
   <DT>15 окт:  <DD><a href="/catalog/cat172.shtml" title="Значительно расширен ассортимент:&#xa;Коронки по бетону в сборе, хвостовик SDS+ HAGWERT"><span class="title">Коронки по бетону</span><span class="dop"> SDS+</span></a><br>
