... + chul + crown + IONICH

--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>15 ноя:  <DD><a href="/catalog/cat420.shtml" title="Значительно расширен ассортимент:&#xa;Свёрла и алмазные коронки (в сборе) по стеклу, керамограниту и керамике"><span class="title">Свёрла по стеклу и керамике</span><span class="dop"></span></a><br>
   <DT>12 ноя:  <DD><a href="/catalog/cat155.shtml" title="Значительно расширен ассортимент:&#xa;Гладилки из нержавеющей стали, прямая и зубчатые"><span class="title">Гладилки из нерж. стали</span><span class="dop"></span></a><br>
   <DT>11 ноя:  <DD><a href="/catalog/cat428.shtml" title="Расширен ассортимент:&#xa;Валик структурный горошек 240 мм &laquo;Мольтопрен&raquo; с рукояткой"><span class="title">Валики структурные</span><span class="dop"> "горошек"</span></a><br>
   <DT>08 ноя:  <DD><a href="/catalog/cat175.shtml" title="Новый товар:&#xa;Пена монтажная пистолетная профессиональная ЗИМНЯЯ &laquo;MaxiArctic-25&raquo;&#xa;для использования при особо низкой температуре &mdash; до -25&deg;C"><span class="title">Пена монтажная</span><span class="dop"> MaxiArctic-25</span></a><br>
@@ -10,8 +11,6 @@
   <DT>07 окт:  <DD><a href="/catalog/cat28.shtml"  title="Новый товар"><span class="title">Диски алмазные</span><span class="dop"> SPIN CERAM</span></a><br>
   <DT>05 окт:  <DD><a href="/catalog/cat92.shtml"  title="Новый товар"><span class="title">Респиратор</span><span class="dop"> Rutex 1001</span></a><br>
   <DT>27 сен:  <DD><a href="/catalog/cat139.shtml" title="Расширен ассортимент:&#xa;Новые молотки слесарные VOLKSHAMMER на деревянной рукоятке"><span class="title">Молотки слесарные</span><span class="dop" style="font-size: smaller"> VOLKSHAMMER</span></a><br>
-  <DT>16 сен:  <DD><a href="/catalog/cat76.shtml"  title="Новые товары"><span class="title">Угольники литые с уровнем</span><span class="dop"></span></a><br>
-  <DT>13 сен:  <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент:&#xa;Новые строительные рулетки EFFECTA &laquo;Nylon&raquo; ПРОФИ"><span class="title">Строительные рулетки</span><span class="dop"> EFFECTA</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
