--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>16 сен:  <DD><a href="/catalog/cat76.shtml"  title="Новые товары"><span class="title">Угольники литые с уровнем</span><span class="dop"></span></a><br>
+  <DT>13 сен:  <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент:&#xa;Новые строительные рулетки EFFECTA &laquo;Nylon&raquo; ПРОФИ"><span class="title">Строительные рулетки</span><span class="dop"> EFFECTA</span></a><br>
   <DT>06 сен:  <DD><a href="/catalog/cat28.shtml"  title="Диск алмазный сегментный РОСОМАХА:&#xa;Цена ЗНАЧИТЕЛЬНО снижена + Распродажа по оптовой цене"><span class="title">Диск алмазный</span><span class="dop"> РОСОМАХА</span></a><br>
   <DT>26 авг : <DD><a href="/catalog/cat69.shtml"  title="Расширен ассортимент: Миксеры универсальные, шестигранный хвостовик"><span class="title">Миксеры</span><span class="dop"> (насадки на миксер)</span></a><br>
   <DT>16 авг : <DD><a href="/catalog/cat48.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Буры по бетону</span><span class="dop"> SDS Max</span></a><br>
