--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>27 ноя:  <DD><a href="/catalog/cat138.shtml" title="Новые товары:&#xa;Кувалды кованые &laquo;Green&raquo; (Россия) с деревянной рукояткой"><span class="title">Кувалды кованые</span><span class="dop"> GREEN</span></a><br>
   <DT>25 ноя:  <DD><a href="/catalog/cat151.shtml" title="Расширен ассортимент:&#xa;Шпатель фасадный нержавеющий 450 мм &laquo;FLAT&raquo;"><span class="title">Шпатели фасадные</span><span class="dop"></span></a><br>
   <DT>15 ноя:  <DD><a href="/catalog/cat420.shtml" title="Значительно расширен ассортимент:&#xa;Свёрла и алмазные коронки (в сборе) по стеклу, керамограниту и керамике"><span class="title">Свёрла по стеклу и керамике</span><span class="dop"></span></a><br>
   <DT>12 ноя:  <DD><a href="/catalog/cat155.shtml" title="Значительно расширен ассортимент:&#xa;Гладилки из нержавеющей стали, прямая и зубчатые"><span class="title">Гладилки из нерж. стали</span><span class="dop"></span></a><br>
@@ -11,7 +12,6 @@
   <DT>09 окт:  <DD><a href="/catalog/cat175.shtml" title="Расширен ассортимент:&#xa;Новая пена SOUDAL &laquo;Profil&raquo; зимняя"><span class="title">Монтажная пена</span><span class="dop"> ЗИМНЯЯ</span></a><br>
   <DT>07 окт:  <DD><a href="/catalog/cat28.shtml"  title="Новый товар"><span class="title">Диски алмазные</span><span class="dop"> SPIN CERAM</span></a><br>
   <DT>05 окт:  <DD><a href="/catalog/cat92.shtml"  title="Новый товар"><span class="title">Респиратор</span><span class="dop"> Rutex 1001</span></a><br>
-  <DT>27 сен:  <DD><a href="/catalog/cat139.shtml" title="Расширен ассортимент:&#xa;Новые молотки слесарные VOLKSHAMMER на деревянной рукоятке"><span class="title">Молотки слесарные</span><span class="dop" style="font-size: smaller"> VOLKSHAMMER</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
