--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>27 сен:  <DD><a href="/catalog/cat139.shtml" title="Расширен ассортимент:&#xa;Новые молотки слесарные VOLKSHAMMER на деревянной рукоятке"><span class="title">Молотки слесарные</span><span class="dop" style="font-size: smaller"> VOLKSHAMMER</span></a><br>
   <DT>16 сен:  <DD><a href="/catalog/cat76.shtml"  title="Новые товары"><span class="title">Угольники литые с уровнем</span><span class="dop"></span></a><br>
   <DT>13 сен:  <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент:&#xa;Новые строительные рулетки EFFECTA &laquo;Nylon&raquo; ПРОФИ"><span class="title">Строительные рулетки</span><span class="dop"> EFFECTA</span></a><br>
   <DT>06 сен:  <DD><a href="/catalog/cat28.shtml"  title="Диск алмазный сегментный РОСОМАХА:&#xa;Цена ЗНАЧИТЕЛЬНО снижена + Распродажа по оптовой цене"><span class="title">Диск алмазный</span><span class="dop"> РОСОМАХА</span></a><br>
