--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>10 дек:  <DD><a href="/catalog/cat171.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Лестницы-стремянки раздвижные трехсекционные"><span class="title">Лестницы</span></a>, <a href="/catalog/cat170.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Стремянки алюминиевые"><span class="title">стремянки</span><span class="dop"></span></a><br>
   <DT>09 дек:  <DD><a href="/catalog/cat29.shtml"  title="Новый товар:&#xa;Пильный диск для УШМ универсальный 125 x 3Т x 22.23 мм RUNNER"><span class="title">Пильный диск для УШМ</span><span class="dop"> RUNNER</span></a><br>
   <DT>04 дек:  <DD><a href="/catalog/cat380.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Гаечные ключи</span><span class="dop"> кольцевые</span></a><br>
   <DT>02 дек:  <DD><a href="/catalog/cat197.shtml" title="Новый товар:&#xa;Батарейки алкалиновые ААА GP24A-2CR4, 4 шт. в блистере"><span class="title">Батарейки алкалиновые</span><span class="dop"> ААА</span></a><br>
@@ -10,8 +11,6 @@
   <DT>11 ноя:  <DD><a href="/catalog/cat428.shtml" title="Расширен ассортимент:&#xa;Валик структурный горошек 240 мм &laquo;Мольтопрен&raquo; с рукояткой"><span class="title">Валики структурные</span><span class="dop"> "горошек"</span></a><br>
   <DT>08 ноя:  <DD><a href="/catalog/cat175.shtml" title="Новый товар:&#xa;Пена монтажная пистолетная профессиональная ЗИМНЯЯ &laquo;MaxiArctic-25&raquo;&#xa;для использования при особо низкой температуре &mdash; до -25&deg;C"><span class="title">Пена монтажная</span><span class="dop"> MaxiArctic-25</span></a><br>
   <DT>05 ноя:  <DD><a href="/catalog/cat189.shtml" title="АКЦИЯ - установлена особенно низкая цена:&#xa;Чашка алмазная зачистная двухрядная 125 мм &laquo;DiaJet&raquo;"><span class="title">Чашка алмазная 125 мм</span><span class="dop"> DiaJet</span></a><br>
-  <DT>28 окт:  <DD><a href="/catalog/cat600.shtml" title="Новые товары"><span class="title">Фал полипропиленовый</span><span class="dop"> 6-12 мм</span></a><br>
-  <DT>15 окт:  <DD><a href="/catalog/cat172.shtml" title="Значительно расширен ассортимент:&#xa;Коронки по бетону в сборе, хвостовик SDS+ HAGWERT"><span class="title">Коронки по бетону</span><span class="dop"> SDS+</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
