--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>28 окт:  <DD><a href="/catalog/cat600.shtml" title="Новые товары"><span class="title">Фал полипропиленовый</span><span class="dop"> 6-12 мм</span></a><br>
+  <DT>15 окт:  <DD><a href="/catalog/cat172.shtml" title="Значительно расширен ассортимент:&#xa;Коронки по бетону в сборе, хвостовик SDS+ HAGWERT"><span class="title">Коронки по бетону</span><span class="dop"> SDS+</span></a><br>
   <DT>09 окт:  <DD><a href="/catalog/cat175.shtml" title="Расширен ассортимент:&#xa;Новая пена SOUDAL &laquo;Profil&raquo; зимняя"><span class="title">Монтажная пена</span><span class="dop"> ЗИМНЯЯ</span></a><br>
   <DT>07 окт:  <DD><a href="/catalog/cat28.shtml"  title="Новый товар"><span class="title">Диски алмазные</span><span class="dop"> SPIN CERAM</span></a><br>
   <DT>05 окт:  <DD><a href="/catalog/cat92.shtml"  title="Новый товар"><span class="title">Респиратор</span><span class="dop"> Rutex 1001</span></a><br>
