--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>17 дек:  <DD><a href="/catalog/cat414.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Буры по бетону для перфоратора SDS Plus HAGWERT"><span class="title">Буры по бетону SDS+</span><span class="dop"> HAGWERT</span></a><br>
   <DT>10 дек:  <DD><a href="/catalog/cat171.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Лестницы-стремянки раздвижные трехсекционные"><span class="title">Лестницы</span></a>, <a href="/catalog/cat170.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Стремянки алюминиевые"><span class="title">стремянки</span><span class="dop"></span></a><br>
   <DT>09 дек:  <DD><a href="/catalog/cat29.shtml"  title="Новый товар:&#xa;Пильный диск для УШМ универсальный 125 x 3Т x 22.23 мм RUNNER"><span class="title">Пильный диск для УШМ</span><span class="dop"> RUNNER</span></a><br>
   <DT>04 дек:  <DD><a href="/catalog/cat380.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Гаечные ключи</span><span class="dop"> кольцевые</span></a><br>
