--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,11 +1,12 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>26 дек:  <DD><a href="/catalog/cat278.shtml" title="Новые товары:&#xa;Провод ПВС белый медный гибкий ГОСТ"><span class="title">Провод ПВС медный</span><span class="dop"> ГОСТ</span></a><br>
+  <DT>25 дек:  <DD><a href="/catalog/cat138.shtml" title="Новые товары:&#xa;Кувалды кованые VOLKSHAMMER со стеклопластиковой рукояткой"><span class="title">Кувалды кованые</span><span class="dop"> VOLKSHAMMER</span></a><br>
   <DT>17 дек:  <DD><a href="/catalog/cat414.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Буры по бетону для перфоратора SDS Plus HAGWERT"><span class="title">Буры по бетону SDS+</span><span class="dop"> HAGWERT</span></a><br>
   <DT>10 дек:  <DD><a href="/catalog/cat171.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Лестницы-стремянки раздвижные трехсекционные"><span class="title">Лестницы</span></a>, <a href="/catalog/cat170.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Стремянки алюминиевые"><span class="title">стремянки</span><span class="dop"></span></a><br>
   <DT>09 дек:  <DD><a href="/catalog/cat29.shtml"  title="Новый товар:&#xa;Пильный диск для УШМ универсальный 125 x 3Т x 22.23 мм RUNNER"><span class="title">Пильный диск для УШМ</span><span class="dop"> RUNNER</span></a><br>
   <DT>04 дек:  <DD><a href="/catalog/cat380.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Гаечные ключи</span><span class="dop"> кольцевые</span></a><br>
   <DT>02 дек:  <DD><a href="/catalog/cat197.shtml" title="Новый товар:&#xa;Батарейки алкалиновые ААА GP24A-2CR4, 4 шт. в блистере"><span class="title">Батарейки алкалиновые</span><span class="dop"> ААА</span></a><br>
-  <DT>27 ноя:  <DD><a href="/catalog/cat138.shtml" title="Новые товары:&#xa;Кувалды кованые &laquo;Green&raquo; (Россия) с деревянной рукояткой"><span class="title">Кувалды кованые</span><span class="dop"> GREEN</span></a><br>
   <DT>25 ноя:  <DD><a href="/catalog/cat151.shtml" title="Расширен ассортимент:&#xa;Шпатель фасадный нержавеющий 450 мм &laquo;FLAT&raquo;"><span class="title">Шпатели фасадные</span><span class="dop"></span></a><br>
   <DT>15 ноя:  <DD><a href="/catalog/cat420.shtml" title="Значительно расширен ассортимент:&#xa;Свёрла и алмазные коронки (в сборе) по стеклу, керамограниту и керамике"><span class="title">Свёрла по стеклу и керамике</span><span class="dop"></span></a><br>
   <DT>12 ноя:  <DD><a href="/catalog/cat155.shtml" title="Значительно расширен ассортимент:&#xa;Гладилки из нержавеющей стали, прямая и зубчатые"><span class="title">Гладилки из нерж. стали</span><span class="dop"></span></a><br>
