--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>27 дек:  <DD><a href="/catalog/cat142.shtml" title="Цены снижены:&#xa;Валики из искусственного меха,&#xa;ворс 12-14 мм, диаметр корпуса 40 мм"><span class="title">Валики</span><span class="dop"> из искусственного меха</span></a><br>
   <DT>26 дек:  <DD><a href="/catalog/cat278.shtml" title="Новые товары:&#xa;Провод ПВС белый медный гибкий ГОСТ"><span class="title">Провод ПВС медный</span><span class="dop"> ГОСТ</span></a><br>
   <DT>25 дек:  <DD><a href="/catalog/cat138.shtml" title="Новые товары:&#xa;Кувалды кованые VOLKSHAMMER со стеклопластиковой рукояткой"><span class="title">Кувалды кованые</span><span class="dop"> VOLKSHAMMER</span></a><br>
   <DT>17 дек:  <DD><a href="/catalog/cat414.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Буры по бетону для перфоратора SDS Plus HAGWERT"><span class="title">Буры по бетону SDS+</span><span class="dop"> HAGWERT</span></a><br>
@@ -10,9 +11,6 @@
   <DT>25 ноя:  <DD><a href="/catalog/cat151.shtml" title="Расширен ассортимент:&#xa;Шпатель фасадный нержавеющий 450 мм &laquo;FLAT&raquo;"><span class="title">Шпатели фасадные</span><span class="dop"></span></a><br>
   <DT>15 ноя:  <DD><a href="/catalog/cat420.shtml" title="Значительно расширен ассортимент:&#xa;Свёрла и алмазные коронки (в сборе) по стеклу, керамограниту и керамике"><span class="title">Свёрла по стеклу и керамике</span><span class="dop"></span></a><br>
   <DT>12 ноя:  <DD><a href="/catalog/cat155.shtml" title="Значительно расширен ассортимент:&#xa;Гладилки из нержавеющей стали, прямая и зубчатые"><span class="title">Гладилки из нерж. стали</span><span class="dop"></span></a><br>
-  <DT>11 ноя:  <DD><a href="/catalog/cat428.shtml" title="Расширен ассортимент:&#xa;Валик структурный горошек 240 мм &laquo;Мольтопрен&raquo; с рукояткой"><span class="title">Валики структурные</span><span class="dop"> "горошек"</span></a><br>
-  <DT>08 ноя:  <DD><a href="/catalog/cat175.shtml" title="Новый товар:&#xa;Пена монтажная пистолетная профессиональная ЗИМНЯЯ &laquo;MaxiArctic-25&raquo;&#xa;для использования при особо низкой температуре &mdash; до -25&deg;C"><span class="title">Пена монтажная</span><span class="dop"> MaxiArctic-25</span></a><br>
-  <DT>05 ноя:  <DD><a href="/catalog/cat189.shtml" title="АКЦИЯ - установлена особенно низкая цена:&#xa;Чашка алмазная зачистная двухрядная 125 мм &laquo;DiaJet&raquo;"><span class="title">Чашка алмазная 125 мм</span><span class="dop"> DiaJet</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
