--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,5 +1,8 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>25 ноя:  <DD><a href="/catalog/cat151.shtml" title="Расширен ассортимент:&#xa;Шпатель фасадный нержавеющий 450 мм &laquo;FLAT&raquo;"><span class="title">Шпатели фасадные</span><span class="dop"></span></a><br>
+  <DT>15 ноя:  <DD><a href="/catalog/cat420.shtml" title="Значительно расширен ассортимент:&#xa;Свёрла и алмазные коронки (в сборе) по стеклу, керамограниту и керамике"><span class="title">Свёрла по стеклу и керамике</span><span class="dop"></span></a><br>
+  <DT>12 ноя:  <DD><a href="/catalog/cat155.shtml" title="Значительно расширен ассортимент:&#xa;Гладилки из нержавеющей стали, прямая и зубчатые"><span class="title">Гладилки из нерж. стали</span><span class="dop"></span></a><br>
   <DT>11 ноя:  <DD><a href="/catalog/cat428.shtml" title="Расширен ассортимент:&#xa;Валик структурный горошек 240 мм &laquo;Мольтопрен&raquo; с рукояткой"><span class="title">Валики структурные</span><span class="dop"> "горошек"</span></a><br>
   <DT>08 ноя:  <DD><a href="/catalog/cat175.shtml" title="Новый товар:&#xa;Пена монтажная пистолетная профессиональная ЗИМНЯЯ &laquo;MaxiArctic-25&raquo;&#xa;для использования при особо низкой температуре &mdash; до -25&deg;C"><span class="title">Пена монтажная</span><span class="dop"> MaxiArctic-25</span></a><br>
   <DT>05 ноя:  <DD><a href="/catalog/cat189.shtml" title="АКЦИЯ - установлена особенно низкая цена:&#xa;Чашка алмазная зачистная двухрядная 125 мм &laquo;DiaJet&raquo;"><span class="title">Чашка алмазная 125 мм</span><span class="dop"> DiaJet</span></a><br>
