--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,3 +1,10 @@
+
+Убери нож модерн
+Добавь буры Хагверт
+убери рулетку
+Добавь алмазные коронки по керамике
+
+
 <div id=n>
   <h2>Новинки</h2><DL>
   <DT>24 янв:  <DD><a href="/catalog/cat208.shtml" title="Новые товары: Мешки для мусора&#xa;из полиэтилена высокого давления (ПВД), особо прочные"><span class="title">Мешки для мусора</span><span class="dop"></span></a><br>
