--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,12 +1,9 @@
-
-Убери нож модерн
-Добавь буры Хагверт
-убери рулетку
-Добавь алмазные коронки по керамике
-
-
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>03 фев:  <DD><a href="/catalog/cat109.shtml" title="Снижены цены: Маркер-краски 'Металлическая краска'&#xa;                              ультра-стойкие, толщина линии 2,2-2,8 мм&#xa;Новые товары:  Маркеры перманентные промышленные&#xa;                              EDDING E-300, толщина линии 1.5-3.0 мм"><span class="title">Строительные маркеры</span></a><br>
+  <DT>31 янв:  <DD><a href="/catalog/cat206.shtml" title="Новый товар:&#xa;Молоток-гвоздодер 500 г VOLKSHAMMER, стеклопластиковая рукоятка"><span class="title">Молоток-гвоздодер</span><span class="dop" style="font-size: smaller"> VOLKSHAMMER</span></a><br>
+  <DT>30 янв:  <DD><a href="/catalog/cat151.shtml" title="Снижены цены:&#xa;Шпательные лопатки из нержавеющей стали, 100 мм"><span class="title">Шпательные лопатки</span><span class="dop"> 100 мм</span></a><br>
+  <DT>29 янв:  <DD><a href="/catalog/cat420.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Свёрла HAGWERT по стеклу и керамике, 2 / 4 грани"><span class="title">Свёрла по стеклу и керамике</span><span class="dop"></span></a><br>
   <DT>24 янв:  <DD><a href="/catalog/cat208.shtml" title="Новые товары: Мешки для мусора&#xa;из полиэтилена высокого давления (ПВД), особо прочные"><span class="title">Мешки для мусора</span><span class="dop"></span></a><br>
   <DT>23 янв:  <DD><a href="/catalog/cat14.shtml"  title="Снижены цены на самые ходовые размеры"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
   <DT>27 дек:  <DD><a href="/catalog/cat142.shtml" title="Цены снижены:&#xa;Валики из искусственного меха,&#xa;ворс 12-14 мм, диаметр корпуса 40 мм"><span class="title">Валики</span><span class="dop"> из искусственного меха</span></a><br>
@@ -23,45 +20,50 @@
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/drill/big/cobalt-sverlo.jpg"><img
-        src="/img/pic/drill/small/cobalt-sverlo.jpg" width="98"
-        title="Твердосплавные свёрла по металлу"></a></td>
+        href="/img/pic/drill/big/cobalt-sverlo.jpg" title="Большое фото: Твердосплавные свёрла по металлу">
+        <img src="/img/pic/drill/small/cobalt-sverlo.jpg" width="98"></a></td>
       <td class="good-txt"><a href="/catalog/cat415.shtml"
-        title="Большое фото: Твердосплавные свёрла по металлу на нашем сайте"><p><span
-        class="title">Твердосплавные свёрла по металлу</span><span
-        class="dop"><br>HAGWERT<br>"Power-Сobalt"</span><span
-        class="addt"><br>фрезерованные шлифованные</span></p></a>
-  </table>
+        title="Большое фото: Твердосплавные свёрла по металлу на нашем сайте">
+        <p>
+          <span class="title">Твердосплавные свёрла по металлу</span><span class="dop"><br>HAGWERT<br>"Power-Сobalt"</span>
+          <span class="addt"><br>фрезерованные шлифованные</span>
+        </p></a></td></table>
   <table class="one-good" cellpadding="0">
     <tr valign="top">
-      <td align="center" width=1>
-        <a class="cboxElement" href="/img/pic/instr/big/570519.jpg" title="Большое фото: Рулетки EFFECTA"><img src="/img/pic/instr/small/570519.jpg" width="98"></a>
-      </td>
+      <td align="center" width=1><a class="cboxElement"
+        href="/img/pic/instr/big/570519.jpg" title="Большое фото: Рулетки EFFECTA">
+        <img src="/img/pic/instr/small/570519.jpg" width="98"></a></td>
       <td class="good-txt"><a href="/catalog/cat72.shtml"
         title="Рулетки EFFECTA на нашем сайте">
         <p>
           <span class="title">Строительные рулетки</span><span class="dop"> EFFECTA:</span>
           <span class="addt"><br>ударопрочный обрезиненный корпус,<br>неодимовые магниты,<br>доп. боковые зацепы</span>
-        </p></a>
-  </table>
+        </p></a></td></table>
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/abraz/big/Krug%20Luga.jpg"><img src="/img/pic/abraz/small/Krug%20Luga.jpg" width="98"
-        title="Большое фото: Круги отрезные по металлу (Луга)"></a></td>
+        href="/img/pic/abraz/big/Krug%20Luga.jpg" title="Большое фото: Круги отрезные по металлу (Луга)">
+        <img src="/img/pic/abraz/small/Krug%20Luga.jpg" width="98"></a></td>
       <td class="good-txt"><a href="/catalog/cat24.shtml"
-        title="Круги отрезные по металлу (Луга) на нашем сайте"><p>
-        <span class="title">Круги отрезные по&nbsp;металлу</span><span class="dop"><br>(пр-во Лужского Абразивного Завода)</span><span class="addt">,<br>разные размеры</span>
-      </p></a>
-  </table>
+        title="Круги отрезные по металлу (Луга) на нашем сайте">
+        <p>
+          <span class="title">Круги отрезные по&nbsp;металлу</span><span class="dop"><br>(пр-во Лужского Абразивного Завода),</span>
+          <span class="addt"><br>разные размеры</span>
+        </p></a></td></table>
   <table class="one-good" cellpadding="0">
   <tr valign="top">
     <td align="center" width=1><a class="cboxElement"
-      href="/img/pic/strhoz/big/19-0-210.jpg"><img src="/img/pic/strhoz/small/19-0-210.jpg" width="98"
-      title="Большое фото: Нож 18 мм с выдвижным лезвием 'Модерн' "></a></td>
+      href="/img/pic/strhoz/big/19-0-210.jpg" title="Большое фото: Нож 18 мм с выдвижным лезвием 'Модерн'">
+      <img src="/img/pic/strhoz/small/19-0-210.jpg" width="98"></a></td>
     <td class="good-txt"><a href="/catalog/cat107.shtml"
-      title="Нож 18 мм с выдвижным лезвием 'Модерн' на нашем сайте"><p>
-      <span class="title">Профессиональный строительный нож </span> <span class="dop">"Модерн"</span><span class="addt">, 18&#8239;мм, выдвижное лезвие, винтовой фиксатор, сталь 60Г</span>
-    </p></a>
-</table>
+      title="Нож 18 мм с выдвижным лезвием 'Модерн' на нашем сайте">
+      <p>
+        <span class="title">Профессиональный строительный нож </span><span class="dop">"Модерн",</span>
+        <span class="addt"> 18&#8239;мм, выдвижное лезвие, винтовой фиксатор, сталь 60Г</span>
+      </p></a></td></table>
 </div>
+
+Убери нож модерн
+Добавь буры Хагверт
+убери рулетку
+Добавь алмазные коронки по керамике
